# vsmaf

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  nodes.csv  run.py  temp.py  test.py  tests.py  tmp.py  visualizer.py  workernodes.csv  工作节点.csv
models/: dimension.py  line.py  point.py  ray.py  vectorspace.py
python/: main.py  point.py  vectorspace.py
python/models/: plane.py  vectorspace.py
src/: dimension.rs  lib.rs  point.rs  vectorspace.rs
