[package]
name = "vsmaf"
version = "0.1.0"
edition = "2021"

[dependencies]
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-datasets = { version = "0.7.0", features = ["iris", "generate"] }
linfa-reduction = "0.7.0"
linfa-tsne = "0.7.0"
ndarray = "0.15.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
[dependencies.uuid]
version = "1.10.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
